

/**
 *
 * @author c16318
 */
public interface Aggregate {
    public abstract Iterator  iterator();
}
