/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

/**
 *
 * @author c16318
 */
public class Book {
    private String name;
    public Book(String name){
        this.name = name;
    }
    
    public String getName(){
        return name;
    }
    
}
