
/**
 *
 * @author c16318
 */
public interface Iterator {
  public abstract boolean hasNext();
  public abstract Object next();
  public abstract int getIndex();
}
